k8s/apps/forgejo-system/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
spec:
  hostnames:
    - git.cbannister.xyz
  parentRefs:
    - name: internal-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
