k8s/apps/forgejo-system/forgejo/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo
  namespace: forgejo-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "2222"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: forgejo-system
            app.kubernetes.io/name: forgejo-runner
        - matchLabels:
            io.kubernetes.pod.namespace: forgejo-runners
            app.kubernetes.io/managed-by: forgejo-runner
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/name: smtp-relay
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
